syntax = "proto3";

package org.openmcf.provider.kubernetes.kubernetesexternaldns.v1;

import "buf/validate/validate.proto";
import "org/openmcf/provider/kubernetes/target_cluster.proto";
import "org/openmcf/shared/foreignkey/v1/foreign_key.proto";
import "org/openmcf/shared/options/options.proto";

// KubernetesExternalDnsSpec defines configuration for ExternalDNS on any cluster.
message KubernetesExternalDnsSpec {
  // Target Kubernetes Cluster
  org.openmcf.provider.kubernetes.KubernetesClusterSelector target_cluster = 1;

  // Kubernetes Namespace
  org.openmcf.shared.foreignkey.v1.StringValueOrRef namespace = 2 [
    (buf.validate.field).required = true,
    (org.openmcf.shared.foreignkey.v1.default_kind) = KubernetesNamespace,
    (org.openmcf.shared.foreignkey.v1.default_kind_field_path) = "spec.name"
  ];

  // flag to indicate if the namespace should be created
  bool create_namespace = 3;

  // ExternalDNS version such as "v0.19.0". Used to set the image tag.
  optional string external_dns_version = 4 [(org.openmcf.shared.options.default) = "v0.19.0"];

  // Helm chart version to deploy. If not specified, uses the default version.
  optional string helm_chart_version = 5 [(org.openmcf.shared.options.default) = "1.19.0"];

  //provider-specific glue. Only one may be set.
  oneof provider_config {
    KubernetesExternalDnsGkeConfig gke = 200;
    KubernetesExternalDnsEksConfig eks = 201;
    KubernetesExternalDnsAksConfig aks = 202;
    KubernetesExternalDnsCloudflareConfig cloudflare = 203;
  }
}

// KubernetesExternalDnsGkeConfig defines configuration for ExternalDNS on GKE with Google Cloud DNS.
message KubernetesExternalDnsGkeConfig {
  // The GCP project that hosts the DNS zone and the GKE cluster.
  org.openmcf.shared.foreignkey.v1.StringValueOrRef project_id = 1 [
    (buf.validate.field).required = true,
    (org.openmcf.shared.foreignkey.v1.default_kind) = GcpProject,
    (org.openmcf.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.project_id"
  ];
  // The GCP DNS zone ID to use for ExternalDNS.
  org.openmcf.shared.foreignkey.v1.StringValueOrRef dns_zone_id = 2 [
    (buf.validate.field).required = true,
    (org.openmcf.shared.foreignkey.v1.default_kind) = GcpDnsZone,
    (org.openmcf.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.zone_id"
  ];
}

// KubernetesExternalDnsEksConfig defines configuration for ExternalDNS on EKS with AWS Route53 .
message KubernetesExternalDnsEksConfig {
  org.openmcf.shared.foreignkey.v1.StringValueOrRef route53_zone_id = 1 [
    (buf.validate.field).required = true,
    (org.openmcf.shared.foreignkey.v1.default_kind) = AwsRoute53Zone,
    (org.openmcf.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.zone_id"
  ];
  // Optional existing IAM role ARN for IRSA; auto-created if blank.
  string irsa_role_arn_override = 2;
}

// KubernetesExternalDnsAksConfig defines configuration for ExternalDNS on AKS with Azure DNS.
message KubernetesExternalDnsAksConfig {
  // The Azure DNS zone ID to use for ExternalDNS.
  org.openmcf.shared.foreignkey.v1.StringValueOrRef dns_zone_id = 1 [
    (buf.validate.field).required = true,
    (org.openmcf.shared.foreignkey.v1.default_kind) = AzureDnsZone,
    (org.openmcf.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.zone_id"
  ];
  // The Azure Managed Identity client ID to use for ExternalDNS.
  string managed_identity_client_id = 2;
}

// KubernetesExternalDnsCloudflareConfig defines configuration for ExternalDNS with Cloudflare DNS.
message KubernetesExternalDnsCloudflareConfig {
  // Cloudflare API token for authentication (scoped with Zone:Zone:Read and Zone:DNS:Edit permissions).
  string api_token = 1 [(buf.validate.field).required = true];

  // Cloudflare DNS zone ID to manage. ExternalDNS will only manage records in this zone.
  org.openmcf.shared.foreignkey.v1.StringValueOrRef dns_zone_id = 2 [
    (buf.validate.field).required = true,
    (org.openmcf.shared.foreignkey.v1.default_kind) = CloudflareDnsZone,
    (org.openmcf.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.zone_id"
  ];

  // Enable Cloudflare proxy (orange cloud) for all managed DNS records.
  // When enabled, traffic routes through Cloudflare's edge network for DDoS protection, WAF, and CDN.
  // Default: false
  bool is_proxied = 3;
}
